{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 157,
  "lineage": "cf2c3a13-65f9-ded5-53a4-83b428d0af08",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "application_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:805907301112:loadbalancer/app/nginx-demotest-alb/09c4dadcdd1b36ed",
            "arn_suffix": "app/nginx-demotest-alb/09c4dadcdd1b36ed",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-demotest-alb-1533010842.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:805907301112:loadbalancer/app/nginx-demotest-alb/09c4dadcdd1b36ed",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-demotest-alb",
            "security_groups": [
              "sg-026d5ae4dba189d48"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0685f04edf4425ee4"
              },
              {
                "subnet_id": "subnet-0ba9761b958bb2e7d"
              }
            ],
            "subnets": [
              "subnet-0685f04edf4425ee4",
              "subnet-0ba9761b958bb2e7d"
            ],
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-alb"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-alb"
            },
            "vpc_id": "vpc-0de0c1c7c2b435551",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "aws-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:internet-gateway/igw-0da45c022c8c11bb2",
            "id": "igw-0da45c022c8c11bb2",
            "owner_id": "805907301112",
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-igw"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-igw"
            },
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:805907301112:listener/app/nginx-demotest-alb/09c4dadcdd1b36ed/05651a93c2975021",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:805907301112:targetgroup/nginx-demotest-tg/2df9218d0b7f37ce",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:805907301112:listener/app/nginx-demotest-alb/09c4dadcdd1b36ed/05651a93c2975021",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:805907301112:loadbalancer/app/nginx-demotest-alb/09c4dadcdd1b36ed",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.application_load_balancer",
            "aws_lb_target_group.target_group",
            "aws_security_group.load_balancer_security_group",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:805907301112:targetgroup/nginx-demotest-tg/2df9218d0b7f37ce",
            "arn_suffix": "targetgroup/nginx-demotest-tg/2df9218d0b7f37ce",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 300,
                "matcher": "200",
                "path": "/v1/healthcheck",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:805907301112:targetgroup/nginx-demotest-tg/2df9218d0b7f37ce",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "nginx-demotest-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-lb-tg"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-lb-tg"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0da45c022c8c11bb2",
            "id": "r-rtb-09b6a6458643daf771080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09b6a6458643daf77",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.aws-igw",
            "aws_route_table.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:route-table/rtb-09b6a6458643daf77",
            "id": "rtb-09b6a6458643daf77",
            "owner_id": "805907301112",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0da45c022c8c11bb2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-routing-table-public"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-routing-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03dfb9eed3a146f70",
            "route_table_id": "rtb-09b6a6458643daf77",
            "subnet_id": "subnet-0685f04edf4425ee4"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0531c2431bb833bdf",
            "route_table_id": "rtb-09b6a6458643daf77",
            "subnet_id": "subnet-0ba9761b958bb2e7d"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "load_balancer_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:security-group/sg-026d5ae4dba189d48",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026d5ae4dba189d48",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20220713153355719300000002",
            "name_prefix": "terraform-",
            "owner_id": "805907301112",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "service_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:security-group/sg-09a4c2fb26d18af94",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a4c2fb26d18af94",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-026d5ae4dba189d48"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20220713153401548300000003",
            "name_prefix": "terraform-",
            "owner_id": "805907301112",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-service-sg"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-service-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.load_balancer_security_group",
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:subnet/subnet-069706862c41ac3f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069706862c41ac3f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805907301112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-private-subnet-1"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-private-subnet-1"
            },
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:subnet/subnet-05ae6c25fcaf571cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ae6c25fcaf571cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "805907301112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-private-subnet-2"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-private-subnet-2"
            },
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:subnet/subnet-0685f04edf4425ee4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.10.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0685f04edf4425ee4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805907301112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-public-subnet-1"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-public-subnet-1"
            },
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:subnet/subnet-0ba9761b958bb2e7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba9761b958bb2e7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "805907301112",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-public-subnet-2"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-public-subnet-2"
            },
            "vpc_id": "vpc-0de0c1c7c2b435551"
          },
          "dependencies": [
            "aws_vpc.aws-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:805907301112:vpc/vpc-0de0c1c7c2b435551",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ac94a22446356bbd",
            "default_route_table_id": "rtb-02ac2630a7b4ad948",
            "default_security_group_id": "sg-08d389a2171e56b9c",
            "dhcp_options_id": "dopt-0f26e47ceebe3d653",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0de0c1c7c2b435551",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02ac2630a7b4ad948",
            "owner_id": "805907301112",
            "tags": {
              "Environment": "demotest",
              "Name": "nginx-vpc"
            },
            "tags_all": {
              "Environment": "demotest",
              "Name": "nginx-vpc"
            }
          }
        }
      ]
    }
  ]
}